--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -2,6 +2,23 @@ parameters:
 #    rgou_bootstrap.example.class: Rgou\BootstrapBundle\Example
 
 services:
-#    rgou_bootstrap.example:
-#        class: %rgou_bootstrap.example.class%
-#        arguments: [@service_id, "plain_value", %parameter%]
+  
+    rgou_bootstrap.twig.globals:
+        class: Rgou\BootstrapBundle\Twig\Extension\GlobalsExtension
+        arguments: ["@service_container"]        
+        tags:
+            - { name: twig.extension }  
+  
+  
+    rgou_bootstrap.menu_builder:
+        class: Rgou\BootstrapBundle\Menu\MenuBuilder
+        arguments: ["@knp_menu.factory"]
+
+    rgou_bootstrap.menu.main:
+        class: Knp\Menu\MenuItem
+        factory_service: rgou_bootstrap.menu_builder
+        factory_method: createMainMenu
+        arguments: ["@request"]
+        scope: request # needed as we have the request as a dependency here
+        tags:
+            - { name: knp_menu.menu, alias: main }
