--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         }
     ],
     "require": {
-        "php": ">=5.3.2"
+        "php": ">=5.3.2",
+        "knplabs/knp-menu": "2.0.*@dev",
+        "knplabs/knp-menu-bundle": "2.0.*@dev"
     },
     "require-dev": {
         "symfony/framework-bundle": ">=2.1,<2.2-dev"
