--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "rgou/bootstrap-bundle",
     "type": "symfony-bundle",
     "description": "Twitter Boostrap Bundle for Symfony 2",
-    "keywords": ["symfony", "bundle", "twitter", "boostrap", "theme"],
+    "keywords": ["symfony", "bundle", "twitter", "bootstrap", "theme"],
     "homepage": "http://github.com/rafaelgou/RgouBoostrapBundle",
     "license": "MIT",
     "authors": [
