--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,11 @@
         "sonata-project/intl-bundle": "2.2.*@dev"
     },
     "require-dev": {
-        "symfony/framework-bundle": ">=2.1,<2.2-dev"
+        "symfony/symfony": "2.3.*",
+        "doctrine/orm": ">=2.2.3,<2.4-dev",
+        "doctrine/doctrine-bundle": "1.2.*",
+        "doctrine/mongodb-odm": "1.0.*@dev",
+        "doctrine/mongodb-odm-bundle": "3.0.*@dev"        
     },
     "autoload": {
         "psr-0": { "Rgou\\BootstrapBundle": "" }
