--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "require": {
         "php": ">=5.3.2",
         "knplabs/knp-paginator-bundle": "2.3.*@dev",
-        "knplabs/knp-menu-bundle": "2.0.0-alpha1",
+        "knplabs/knp-menu-bundle": "2.0.*@dev",
         "sonata-project/intl-bundle": "2.2.*@dev"
     },
     "require-dev": {
