--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "php": ">=5.3.2",
         "knplabs/knp-paginator-bundle": "2.3.*@dev",
         "knplabs/knp-menu-bundle": "*",
-        "sonata-project/intl-bundle": "2.2.*@dev"
+        "sonata-project/intl-bundle": "*"
     },
     "require-dev": {
         "symfony/symfony": "2.3.*",
