--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
     "require": {
         "php": ">=5.3.2",
         "knplabs/knp-paginator-bundle": "2.3.*@dev",
-        "knplabs/knp-menu-bundle": "2.0.0-alpha1",
-        "sonata-project/intl-bundle": "2.2.*@dev"
+        "knplabs/knp-menu-bundle": "*",
+        "sonata-project/intl-bundle": "*"
     },
     "require-dev": {
         "symfony/symfony": "2.3.*",
