--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "require": {
         "php": ">=5.3.2",
         "knplabs/knp-paginator-bundle": "2.3.*@dev",
-        "knplabs/knp-menu-bundle": "*",
+        "knplabs/knp-menu-bundle": "2.2.*@dev",
         "sonata-project/intl-bundle": "*"
     },
     "require-dev": {
@@ -32,10 +32,6 @@
     "minimum-stability": "dev",
     "target-dir": "Rgou/BootstrapBundle",
     "repositories": [
-        {
-            "type":"vcs",
-            "url":"/var/www/citydata/Portal/bundles/SonataIntlBundle"
-        },
         {
             "type":"vcs",
             "url":"/var/www/citydata/Portal/bundles/KnpMenu"
